fix(Services): improve white space between two service cards on mobile.

--- a/bema-clinicals/src/containers/services/Services.module.css
+++ b/bema-clinicals/src/containers/services/Services.module.css
@@ -85,6 +85,10 @@
     padding: 0 3rem;
   }
 
+  .service__card-box--2 {
+    margin-bottom: 4rem;
+  }
+
   .services__bullet--2 {
     justify-self: center;
     flex-direction: row-reverse;
